<resources>
    <string name="app_name">Contexto</string>
    <string name="txtIniciarSesion">Iniciar Sesión</string>
    <string name="txtUsuario">Usuario:</string>
    <string name="txtPassword">Contraseña:</string>
    <string name="swtRecordar">Recordar</string>
    <string name="txtOlvPassword">¿Olvidaste tu contraseña?</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="hintUsuario">Tu usuario</string>
    <string name="hintPassword">Tu contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtCerrar">Cerrar</string>
    <string name="btnVerAgenda">Ver agenda</string>
    <string name="btnNuevaCita">Nueva cita</string>
    <string name="txtFiltro">Filtro:</string>
    <string name="btnCompletado">Completado</string>
    <string name="btnReprogramar">Reprogramar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="hintSeleccionePaciente">Seleccione un paciente</string>
    <string name="txtPaciente">Paciente</string>
    <string name="btnGuardar">Guardar</string>
    <string name="txtNota">Notas</string>
    <string name="hintNota">Ingrese notas sobre la cita</string>
    <string name="txtFecha">Fecha</string>
    <string name="hintFecha">aaaa-mm-dd</string>
    <string name="hintHora">00:00 am/pm</string>
    <string name="txtHora">Hora</string>
    <string name="txtDuracion">Duracion</string>
    <string name="txtTipoSesion">Tipo Sesión</string>
    <string name="hintHoraMin">hh:mm</string>
    <string name="txtConsultorio">Consultorio</string>
    <string name="txtHorario">Horario</string>
    <string name="ckLunes">Lunes</string>
    <string name="ckMartes">Martes</string>
    <string name="ckMiercoles">Miercoles</string>
    <string name="ckJueves">Jueves</string>
    <string name="ckViernes">Viernes</string>
    <string name="ckSabado">Sabado</string>
    <string name="ckDomingo">Domingo</string>
    <string name="txtDias">Dias</string>
    <string name="txtSemanaEscogida">Semana escogida</string>
    <string name="txtanno">Año</string>
    <string name="txtMes">Mes</string>
    <string name="txtSemanaHaClonar">Semana ha clonar</string>
    <string name="txtMsjDisponibilidad">No hay consultorios disponibles para este día, no es posible agregar un nuevo evento.</string>
    <string name="btnConfirmar">CONFIRMAR</string>
    <string name="btnMarcarAsistencia">Marcar Asistencia</string>
</resources>