<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ClonarSemanaDialogFragment">

    <View
        android:id="@+id/viewHorarioDialog"
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_barra"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/roboto"
        android:text="@string/txtSemanaEscogida"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHorarioDialog" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <Spinner
            android:id="@+id/spnnFechaIniClon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/input" />

        <EditText
            android:id="@+id/edtFechaFinClon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/input"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/hintFecha"
            android:inputType="date"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClonarSem"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_redondeado"
        android:fontFamily="@font/roboto"
        android:text="@string/btnConfirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtDias"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/ckLunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckLunes" />

            <CheckBox
                android:id="@+id/ckJueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckJueves" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/ckMartes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckMartes" />

            <CheckBox
                android:id="@+id/ckViernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckViernes" />

            <CheckBox
                android:id="@+id/ckDomingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckDomingo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/ckMiercoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckMiercoles" />

            <CheckBox
                android:id="@+id/ckSabado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckSabado" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/roboto"
            android:text="@string/txtanno"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="3dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txtMes"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout11"
        app:layout_constraintStart_toStartOf="@+id/linearLayout11"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <Spinner
            android:id="@+id/spnnAnnoClon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/input" />

        <Spinner
            android:id="@+id/spnnMesClon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/input" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/roboto"
        android:text="@string/txtSemanaHaClonar"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout13"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnClonarSem"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout13"
        app:layout_constraintStart_toStartOf="@+id/linearLayout13"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <Spinner
            android:id="@+id/spnnFechaClon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/input" />

        <EditText
            android:id="@+id/edtFechaClon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/input"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/hintFecha"
            android:inputType="date"
            android:padding="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>