<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/edtUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input"
            android:hint="@string/hintPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swtRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/swtRecordar"
        android:theme="@style/SwitchStyle"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorGrisOscuro"
        app:layout_constraintEnd_toEndOf="@+id/btnNuevaCita"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevaCita" />

    <Button
        android:id="@+id/btnNuevaCita"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_redondeado"
        android:fontFamily="@font/roboto"
        android:text="@string/btnIngresar"
        app:layout_constraintEnd_toEndOf="@+id/edtUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/txtOlvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txtOlvPassword"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevaCita"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txtUsuario"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/edtUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/hintUsuario"
        android:inputType="textPersonName"
        android:background="@drawable/input"
        android:padding="10dp"
        android:textCursorDrawable="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtPassword"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuario" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtIniciarSesion"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/txtIniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>