<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CitaActivity">

    <SearchView
        android:id="@+id/srcPaciente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcyPaciente"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srcPaciente" />

    <View
        android:id="@+id/viewCitaBarra"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/dialog_barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcyPaciente" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtPaciente"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCitaBarra" />

    <EditText
        android:id="@+id/edtPacienteNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input"
        android:enabled="false"
        android:hint="@string/hintSeleccionePaciente"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textCursorDrawable="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnNuevaCita"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_redondeado"
        android:fontFamily="@font/roboto"
        android:text="@string/btnGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtNota"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/edtCitaHora"
        app:layout_constraintTop_toBottomOf="@+id/edtCitaHora" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textCursorDrawable="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btnNuevaCita"
        app:layout_constraintEnd_toEndOf="@+id/edtPacienteNombre"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtFecha"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/edtPacienteNombre"
        app:layout_constraintTop_toBottomOf="@+id/edtPacienteNombre" />

    <EditText
        android:id="@+id/edtCitaFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/input"
        android:enabled="true"
        android:focusable="false"
        android:hint="@string/hintFecha"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtPacienteNombre"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtHora"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/edtCitaFecha"
        app:layout_constraintTop_toBottomOf="@+id/edtCitaFecha" />

    <EditText
        android:id="@+id/edtCitaHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/input"
        android:enabled="true"
        android:focusable="false"
        android:hint="@string/hintHora"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtCitaFecha"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>