<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.AgendaDialogFragment">

    <View
        android:id="@+id/viewAgendaDialog"
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCitaCompletado"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btnCompletado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAgendaDialog" />

    <Button
        android:id="@+id/btnCitaReprogramar"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btnReprogramar"
        app:layout_constraintEnd_toEndOf="@+id/btnCitaCompletado"
        app:layout_constraintStart_toStartOf="@+id/btnCitaCompletado"
        app:layout_constraintTop_toBottomOf="@+id/btnCitaCompletado" />

    <Button
        android:id="@+id/btnCitaEliminar"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnEliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCitaReprogramar"
        app:layout_constraintStart_toStartOf="@+id/btnCitaReprogramar"
        app:layout_constraintTop_toBottomOf="@+id/btnCitaReprogramar" />

</androidx.constraintlayout.widget.ConstraintLayout>